Change the portfolio id to recent and added responsive design

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- <img src="./resources/img/massiv-media-logo.PNG" alt="" class="nav__logo"> -->
         <ul>
           <li><a href="#home">Inicio</a></li>
-          <li><a href="#portfolio">Portafolio</a></li>
+          <li><a href="#recent">Reciente</a></li>
           <li><a href="#services">Servicios</a></li>
           <li><a href="#about">Nosotros</a></li>
           <li><a href="#contact">Contacto</a></li>
@@ -35,8 +35,8 @@
           <a href="#contact" class="home__button">Contáctanos</a>
         </div>
       </section>
-      <section id="portfolio">
-        <h2>Recientes</h2>
+      <section id="recent">
+        <h2>Reciente</h2>
         <article class="gallery">
           <img src="./resources/img/bxby.jpg" alt="Videoclip con Bxby" />
           <img
