Changed the services section

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
               src="https://images.unsplash.com/photo-1615494487949-f5f68968330e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
               alt="Teléfono mostrando un feed de Instagram"
             />
-            <figcaption>Gestión de Redes Sociales</figcaption>
+            <figcaption>Contenido para Redes Sociales</figcaption>
           </figure>
-          <figure>
+          <!-- <figure>
             <img
               src="https://images.unsplash.com/photo-1561736778-92e52a7769ef?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
               alt="Configuración de programación"
             />
-            <figcaption>Desarrollo Web</figcaption>
+            <figcaption>Desarrollo Web</figcaption> -->
           </figure>
         </article>
       </section>
