Changed logo to white logo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="overlay">
           <img
             class="home__logo"
-            src="./resources/img/massiv-media-logo.PNG"
+            src="./resources/img/massiv-media-logo-white.png"
             alt="Logo de Massiv Media"
           />
           <h1>Bienvenido a Massiv Media</h1>
