Incluimos la etiqueta de cierre en el código comentado y se cambió la frase de inicio

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
             alt="Logo de Massiv Media"
           />
           <h1>Bienvenido a Massiv Media</h1>
-          <p>
-            Creemos visuales impresionantes que dejan una impresión duradera.
-          </p>
+          <p>"Creamos experiencias visuales impactantes que dejan huella."</p>
           <a href="#contact" class="home__button">Contáctanos</a>
         </div>
       </section>
@@ -96,8 +94,8 @@
               src="https://images.unsplash.com/photo-1561736778-92e52a7769ef?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
               alt="Configuración de programación"
             />
-            <figcaption>Desarrollo Web</figcaption> -->
-          </figure>
+            <figcaption>Desarrollo Web</figcaption>
+          </figure> -->
         </article>
       </section>
       <section id="about">
