se quitaron las comillas de la frase de inicio

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             alt="Logo de Massiv Media"
           />
           <h1>Bienvenido a Massiv Media</h1>
-          <p>"Creamos experiencias visuales impactantes que dejan huella."</p>
+          <p>Creamos experiencias visuales impactantes que dejan huella.</p>
           <a href="#contact" class="home__button">Contáctanos</a>
         </div>
       </section>
