--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
           />
         </article>
       </section>
-      <section id="services">
+      <!-- <section id="services">
         <h2>Nuestros Servicios</h2>
         <article class="gallery">
-          <!-- Services content here -->
           <figure>
             <img
               src="https://images.unsplash.com/photo-1535540878298-a155c6d065ef?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -107,15 +106,15 @@
             />
             <figcaption>Contenido para Redes Sociales</figcaption>
           </figure>
-          <!-- <figure>
+          <figure>
             <img
               src="https://images.unsplash.com/photo-1561736778-92e52a7769ef?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
               alt="Configuración de programación"
             />
             <figcaption>Desarrollo Web</figcaption>
-          </figure> -->
+          </figure>
         </article>
-      </section>
+      </section> -->
       <section id="about">
         <h2>Nosotros</h2>
         <p>
