--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
           <li><a href="#home">Inicio</a></li>
           <li><a href="#recent">Reciente</a></li>
-          <li><a href="#services">Servicios</a></li>
+          <!-- <li><a href="#services">Servicios</a></li> -->
           <li><a href="#about">Nosotros</a></li>
           <li><a href="#contact">Contacto</a></li>
         </ul>
