created the information block and added padding to it, set the about section to be an information block

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           />
         </article>
       </section>
-      <section id="about">
+      <section class="information" id="about">
         <h2>Nosotros</h2>
         <p>
           Somos una agencia creativa especializada en diseño visual. Fundada por
