actualizar imagenes en galeria

--- a/index.html
+++ b/index.html
@@ -34,22 +34,25 @@
       <section id="recent">
         <h2>Reciente</h2>
         <article class="gallery">
-          <img src="./resources/img/bxby.jpg" alt="Videoclip con Bxby" />
+          <img
+            src="./resources/img/perreo-terrorifico-1.jpg"
+            alt="Videoclip con Bxby y Yoshi Parayal"
+          />
           <iframe
-            class="custom-video"
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/0y-8BsaToQk?si=BRCnxGszv6aAfZ6n"
-            title="YouTube video player"
+            src="https://www.youtube.com/embed/V2LakKERxiY"
+            title="Perreo Terrorífico - Yoshi Parayal x @bxby_zv  (F#ck Inn Fest) (Video Oficial)"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin"
             allowfullscreen
           ></iframe>
-          <img src="./resources/img/bxby2.jpg" alt="Videoclip con Bxby" />
           <img
-            src="./resources/img/arlequin.jpg"
-            alt="Colaboración con Arlequin Entertainment"
+            src="./resources/img/perreo-terrorifico-2.jpg"
+            alt="Videoclip con Bxby y Yoshi Parayal"
+          />
+          <img
+            src="./resources/img/industrial-room-1.jpg"
+            alt="Industrial Room"
           />
           <img
             src="./resources/img/boqueria.png"
@@ -59,25 +62,17 @@
             src="./resources/img/arlequin2.jpg"
             alt="Colaboración con Arlequin Entertainment"
           />
-          <img
-            src="./resources/img/pastrana1.jpg"
-            alt="Videoclip con Pastrana"
-          />
+          <img src="./resources/img/bxby.jpg" alt="Videoclip con Bxby" />
           <iframe
             class="custom-video"
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/aTd1_jxvhpY?si=DuI1he_StWJb2KJs"
+            src="https://www.youtube.com/embed/0y-8BsaToQk?si=BRCnxGszv6aAfZ6n"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin"
             allowfullscreen
           ></iframe>
-          <img
-            src="./resources/img/pastrana2.jpg"
-            alt="Videoclip con Pastrana"
-          />
+          <img src="./resources/img/bxby2.jpg" alt="Videoclip con Bxby" />
         </article>
       </section>
       <section class="information" id="about">
