mantenimiento area gallery, quitar area y boton

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav class="nav">
         <ul>
           <li><a href="#home">Inicio</a></li>
-          <li><a href="#recent">Reciente</a></li>
+          <!-- <li><a href="#recent">Reciente</a></li> -->
           <li><a href="#about">Nosotros</a></li>
           <li><a href="#contact">Contacto</a></li>
         </ul>
@@ -31,7 +31,7 @@
           <a href="#contact" class="home__button">Contáctanos</a>
         </div>
       </section>
-      <section id="recent">
+      <!-- <section id="recent">
         <h2>Reciente</h2>
         <article class="gallery">
           <img
@@ -39,6 +39,7 @@
             alt="Videoclip con Bxby y Yoshi Parayal"
           />
           <iframe
+            class="custom-video"
             src="https://www.youtube.com/embed/V2LakKERxiY"
             title="Perreo Terrorífico - Yoshi Parayal x @bxby_zv  (F#ck Inn Fest) (Video Oficial)"
             frameborder="0"
@@ -74,7 +75,7 @@
           ></iframe>
           <img src="./resources/img/bxby2.jpg" alt="Videoclip con Bxby" />
         </article>
-      </section>
+      </section> -->
       <section class="information" id="about">
         <h2>Nosotros</h2>
         <p>
