--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
     <link rel="icon" href="./resources/img/massiv-media-logo.PNG" />
   </head>
   <body>
+    <nav class="nav">
+      <ul>
+        <li><a href="#home">Inicio</a></li>
+        <!-- <li><a href="#recent">Reciente</a></li> -->
+        <li><a href="#about">Nosotros</a></li>
+        <li><a href="#contact">Contacto</a></li>
+      </ul>
+    </nav>
     <header class="header">
-      <nav class="nav">
-        <ul>
-          <li><a href="#home">Inicio</a></li>
-          <!-- <li><a href="#recent">Reciente</a></li> -->
-          <li><a href="#about">Nosotros</a></li>
-          <li><a href="#contact">Contacto</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
       <section class="home" id="home">
         <div class="overlay">
           <img
@@ -31,22 +29,26 @@
           <a href="#contact" class="home__button">Contáctanos</a>
         </div>
       </section>
-      <!-- <section id="recent">
+    </header>
+    <main class="content">
+      <section id="recent">
         <h2>Reciente</h2>
         <article class="gallery">
           <img
             src="./resources/img/perreo-terrorifico-1.jpg"
             alt="Videoclip con Bxby y Yoshi Parayal"
           />
-          <iframe
-            class="custom-video"
-            src="https://www.youtube.com/embed/V2LakKERxiY"
-            title="Perreo Terrorífico - Yoshi Parayal x @bxby_zv  (F#ck Inn Fest) (Video Oficial)"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen
-          ></iframe>
+          <div class="video-container">
+            <iframe
+              class="custom-video"
+              src="https://www.youtube.com/embed/V2LakKERxiY"
+              title="Perreo Terrorífico - Yoshi Parayal x @bxby_zv  (F#ck Inn Fest) (Video Oficial)"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
           <img
             src="./resources/img/perreo-terrorifico-2.jpg"
             alt="Videoclip con Bxby y Yoshi Parayal"
@@ -60,22 +62,36 @@
             alt="Fotografías de alimentos"
           />
           <img
+            src="./resources/img/industrial-room-2.jpg"
+            alt="Colaboración con Industrial Room"
+          />
+          <img src="./resources/img/bxby.jpg" alt="Videoclip con Bxby" />
+          <div class="video-container">
+            <iframe
+              class="custom-video"
+              src="https://www.youtube.com/embed/0y-8BsaToQk?si=BRCnxGszv6aAfZ6n"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <img src="./resources/img/bxby2.jpg" alt="Videoclip con Bxby" />
+          <img
+            src="./resources/img/arlequin.jpg"
+            alt="Colaboración con Arlequin Entertainment"
+          />
+          <img
+            src="./resources/img/industrial-room-3.jpg"
+            alt="StaleBread! en Indusrial Room"
+          />
+          <img
             src="./resources/img/arlequin2.jpg"
             alt="Colaboración con Arlequin Entertainment"
           />
-          <img src="./resources/img/bxby.jpg" alt="Videoclip con Bxby" />
-          <iframe
-            class="custom-video"
-            src="https://www.youtube.com/embed/0y-8BsaToQk?si=BRCnxGszv6aAfZ6n"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen
-          ></iframe>
-          <img src="./resources/img/bxby2.jpg" alt="Videoclip con Bxby" />
         </article>
-      </section> -->
+      </section>
       <section class="information" id="about">
         <h2>Nosotros</h2>
         <p>
