add recent button again

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="nav">
       <ul>
         <li><a href="#home">Inicio</a></li>
-        <!-- <li><a href="#recent">Reciente</a></li> -->
+        <li><a href="#recent">Reciente</a></li>
         <li><a href="#about">Nosotros</a></li>
         <li><a href="#contact">Contacto</a></li>
       </ul>
