--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <link rel="icon" href="./resources/img/massiv-media-logo.PNG" />
   </head>
   <body>
-    <nav class="nav">
-      <ul>
-        <li><a href="#home">Inicio</a></li>
-        <li><a href="#recent">Reciente</a></li>
-        <li><a href="#about">Nosotros</a></li>
-        <li><a href="#contact">Contacto</a></li>
-      </ul>
-    </nav>
     <header class="header">
+      <nav class="nav">
+        <ul>
+          <li><a href="#home">Inicio</a></li>
+          <li><a href="#recent">Reciente</a></li>
+          <li><a href="#about">Nosotros</a></li>
+          <li><a href="#contact">Contacto</a></li>
+        </ul>
+      </nav>
+
       <section class="home" id="home">
-        <div class="overlay">
+        <div class="home__overlay">
           <img
             class="home__logo"
             src="./resources/img/massiv-media-logo-white.png"
@@ -31,8 +32,8 @@
       </section>
     </header>
     <main class="content">
-      <section id="recent">
-        <h2>Reciente</h2>
+      <section id="recent" class="recent">
+        <h2 class="recent__title">Reciente</h2>
         <article class="gallery">
           <img
             src="./resources/img/perreo-terrorifico-1.jpg"
