remove gallery temporarily

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       </section>
     </header>
     <main class="content">
-      <section id="recent" class="recent">
-        <h2 class="recent__title">Reciente</h2>
-        <article class="gallery">
+      <!-- <section id="recent" class="recent">
+        <h2 class="recent__title">Reciente</h2> -->
+        <!-- <article class="gallery">
           <img
             src="./resources/img/perreo-terrorifico-1.jpg"
             alt="Videoclip con Bxby y Yoshi Parayal"
@@ -91,7 +91,7 @@
             src="./resources/img/arlequin2.jpg"
             alt="Colaboración con Arlequin Entertainment"
           />
-        </article>
+        </article> -->
       </section>
       <section class="information" id="about">
         <h2>Nosotros</h2>
