add credit to footer

--- a/index.html
+++ b/index.html
@@ -63,7 +63,17 @@
       <footer class="footer">
         <p class="footer__copyright">
           &copy; <span class="footer__copyright-year" id="year"></span> Massiv
-          Media. Todos los derechos reservados.
+          Media. All rights reserved.
+        </p>
+        <p class="footer__credit">
+          Designed & developed by
+          <a
+            href="https://bastianrecr.github.io"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="footer__credit-link"
+            >bastianrecr</a
+          >
         </p>
       </footer>
     </div>
