hotfix location typo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           />
           <div class="social-links-card__user-main-information">
             <p class="social-links-card__title">Massiv Media</p>
-            <p class="social-links-card__location">Veracruz, Mexico</p>
+            <p class="social-links-card__location">Veracruz, México</p>
           </div>
           <p class="social-links-card__bio">"Visualiza tus Ideas."</p>
           <ul class="social-links-card__links">
